# haskell-language-server

./: cabal-ghc93.project  cabal.project  haskell-language-server.cabal
ghcide/src/Development/IDE/Core/: Rules.hs
hie-compat/: hie-compat.cabal
hls-test-utils/: hls-test-utils.cabal
